# csx3dif

./: .gitignore  Cargo.toml  README.md
csx3dif-web/: Cargo.toml  rust-toolchain.toml
csx3dif-web/js/csx3dif-web/: index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.js  webpack.config.js
csx3dif-web/js/csx3dif-web/src/: main.ts  style.css  worker.ts
csx3dif-web/src/: lib.rs
libcsx/: Cargo.toml
libcsx/src/: brush.rs  bsp.rs  builder.rs  csx.rs  lib.rs  light.rs  lightmap.rs
libdif/src/: interior.rs  interior_path_follower.rs  static_mesh.rs  sub_object.rs  trigger.rs  types.rs
src/: main.rs
