[package]
name = "csx3dif"
version = "0.1.0"
authors = ["RandomityGuy"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libcsx = { path = "libcsx" }
libdif = { path = "libdif" }
serde = { version = "1.0.175", features = ["derive"] }
clap = { version = "4.3.19", features = ["derive"] }
indicatif = "0.17.6"
