[package]
name = "csx3dif-web"
version = "0.1.0"
authors = ["RandomityGuy"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasm-bindgen = "0.2.87"
libcsx = { path = "../libcsx" }
libdif = { path = "../libdif" }
rayon = "1.5"
wasm-bindgen-rayon = { version = "1.0" }
getrandom = { version = "0.2", features = ["js"] }
js-sys = "0.3.64"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.4"
console_error_panic_hook = "0.1.7"
serde_bytes = "0.11.12"

[lib]
crate-type = ["cdylib", "rlib"]
